test/library/standard/Map/types/testTupleIndexingError.good
./MapTest.chpl:55: In function 'testMap':
./MapTest.chpl:88: error: cannot assign to const variable
  testTupleIndexingError.chpl:10: called as testMap(type t = 2*shared T, param testIndexing = true)
